testData/org/elixir_lang/inspection/no_parentheses_many_strict_test_case/MatchedDotMatchedCallOperationAtEnd.ex
one.(
  one,
  Two.two positional<error descr="unexpected comma.  Parentheses are required to solve ambiguity in nested calls.">,</error> key: value
)